[fixup] - Correzione visibilità btn loading

--- a/src/bootstrap/_buttons.scss
+++ b/src/bootstrap/_buttons.scss
@@ -38,19 +38,24 @@
   .btn-loader {
     @extend .spinner-border;
     @extend .spinner-border-sm;
+    display: none !important;
   }
 
-  .spinner-border {
+  .btn-loader {
     vertical-align: middle !important;
   }
 
-  .btn-text {
-    margin-left: 0.5rem;
-  }
+  //.btn-text {
+  //  margin-left: 0.5rem;
+  //}
 
   &.loading {
-    .spinner-border {
-      display: inline-block;
+    .btn-loader {
+      display: inline-block !important;
+    }
+
+    .btn-text {
+      margin-left: 0.5rem;
     }
   }
 }
